<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_meeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meeting_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/meeting_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/fab_add_meeting"
            android:id="@+id/meeting_action_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/text_margin"
            app:srcCompat="@drawable/action_icon_add" />

</FrameLayout>

