<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
    <item
            android:id="@+id/menu_filter_button"
            android:title="@string/menu_filter"
            app:showAsAction="always"
            android:tint="?attr/colorControlNormal"
            android:icon="@drawable/action_icon_filter" />
</menu>