<resources>
    <string name="app_name">Maréu</string>
    <string name="fragment_meetings">Meetings</string>
    <string name="fragment_booking">Book a meeting</string>
    <string name="fragment_filtering">Filter meetings</string>

    <string name="fab_add_meeting">Book a meeting</string>

    <string name="menu_filter">Filter</string>

    <string name="add_meeting_subject">Meeting Subject</string>
    <string name="add_meeting_room">Meeting Room</string>
    <string name="add_meeting_time">Meeting Time</string>
    <string name="add_meeting_time_set">Set Time</string>
    <string name="add_meeting_validate">Book Meeting</string>
    <string name="add_meeting_validation_failed">Please check any fields for errors.</string>

    <string name="filter_meeting_room">Meeting Room</string>
    <string name="filter_meeting_time">Meeting Time</string>

    <string name="filter_meeting_room_remove_accessibility">Delete Meeting Room Filter</string>
    <string name="filter_meeting_time_remove_accessibility">Delete Meeting Time Filter</string>

    <string name="participant_mail">Participant Mail</string>

    <string name="accessibility_remove_meeting">Delete meeting %1$s taking place at %2$s</string>
    <string name="accessibility_remove_room_filter">Remove the room filter</string>
    <string name="accessibility_remove_time_filter">Remove the time filter</string>
    <string name="accessibility_define_room_filter">Define the room filter</string>
    <string name="accessibility_define_time_filter">Define the time filter</string>
    <string name="accessibility_update_room_filter">Change the room filter. Currently set to: %s</string>
    <string name="accessibility_update_time_filter">Change the time filter> Currently set to: %s</string>
    <string name="accessibility_check_participant">Check state for mail %s</string>
</resources>