...
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end">

        <Button
                android:id="@+id/meeting_list_item_action_delete"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/action_icon_delete" />
    </LinearLayout>

...
